Hopefully fixed hamburger dropdown. Background is now visible and appropriate colors. Also it is appropriately placed vertically.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -83,7 +83,7 @@ body {
   text-align: justify;
 }
 
-@media screen and (max-device-width: 600px) {
+@media screen and (max-device-width: 767px) {
   /* some CSS here */
   #page {
     padding-top:58px;
